companyweb/force-app/main/default/objects/account/fields/CW_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>CW_Address_Line_1__c</fullName>
    <description>Address.Line1</description>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>