companyweb/force-app/main/default/objects/account/fields/CW_City__c.field-meta.xml
<CustomField>
    <fullName>CW_City__c</fullName>
    <description>Address.City</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>