companyweb/force-app/main/default/objects/account/fields/CW_Credit_Limit_Reason__c.field-meta.xml
<CustomField>
    <fullName>CW_Credit_Limit_Reason__c</fullName>
    <description>CreditLimit.Info</description>
    <label>Credit Limit Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>