companyweb/force-app/main/default/objects/account/fields/CW_Detail_URL__c.field-meta.xml
<CustomField>
    <fullName>CW_Detail_URL__c</fullName>
    <description>DetailUrl</description>
    <label>Detail URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>