companyweb/force-app/main/default/objects/account/fields/CW_Employees__c.field-meta.xml
<CustomField>
    <fullName>CW_Employees__c</fullName>
    <description>Balances.Rub9087</description>
    <label>Employees (FTE)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>