companyweb/force-app/main/default/objects/account/fields/CW_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CW_End_Date__c</fullName>
    <description>EndDate</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>