companyweb/force-app/main/default/objects/account/fields/CW_Full_Address__c.field-meta.xml
<CustomField>
    <fullName>CW_Full_Address__c</fullName>
    <formula>CW_Address_Line_1__c  &amp; BR() &amp; 
CW_Address_Line_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>