companyweb/force-app/main/default/objects/account/fields/CW_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>CW_Full_Name__c</fullName>
    <formula>CW_Name__c  &amp; &quot; &quot; &amp; CW_Abbreviation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>