companyweb/force-app/main/default/objects/account/fields/CW_Joint_Commitees__c.field-meta.xml
<CustomField>
    <fullName>CW_Joint_Commitees__c</fullName>
    <label>Joint Commitees</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>