companyweb/force-app/main/default/objects/account/fields/CW_Joint_Commitees_White_Collar__c.field-meta.xml
<CustomField>
    <fullName>CW_Joint_Commitees_White_Collar__c</fullName>
    <label>Employees (White collar workers)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>