companyweb/force-app/main/default/objects/account/fields/CW_Kyc_URL__c.field-meta.xml
<CustomField>
    <fullName>CW_Kyc_URL__c</fullName>
    <label>Kyc URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>