companyweb/force-app/main/default/objects/account/fields/CW_Legal_Form__c.field-meta.xml
<CustomField>
    <fullName>CW_Legal_Form__c</fullName>
    <label>Legal Form</label>
    <length>10</length>
    <type>Text</type>
</CustomField>