companyweb/force-app/main/default/objects/account/fields/CW_Main_Activity__c.field-meta.xml
<CustomField>
    <fullName>CW_Main_Activity__c</fullName>
    <label>Main Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>