companyweb/force-app/main/default/objects/account/fields/CW_Preferred_Languages_PL__c.field-meta.xml
<CustomField>
    <fullName>CW_Preferred_Languages_PL__c</fullName>
    <label>Preferred Languages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Preferred_Languages</valueSetName>
    </valueSet>
</CustomField>