companyweb/force-app/main/default/objects/account/fields/CW_Report_URL__c.field-meta.xml
<CustomField>
    <fullName>CW_Report_URL__c</fullName>
    <description>ReportUrl</description>
    <label>Report URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>