companyweb/force-app/main/default/objects/account/fields/CW_Revenue__c.field-meta.xml
<CustomField>
    <fullName>CW_Revenue__c</fullName>
    <description>Balances.Rub70</description>
    <label>Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>