companyweb/force-app/main/default/objects/account/fields/CW_Score_Image__c.field-meta.xml
<CustomField>
    <fullName>CW_Score_Image__c</fullName>
    <description>Score.ScoreImage</description>
    <label>Score Image</label>
    <length>50</length>
    <type>Text</type>
</CustomField>