companyweb/force-app/main/default/objects/account/fields/CW_Social_Security_Information__c.field-meta.xml
<CustomField>
    <fullName>CW_Social_Security_Information__c</fullName>
    <label>Social Security Information</label>
    <length>15</length>
    <type>Text</type>
</CustomField>