companyweb/force-app/main/default/objects/account/fields/CW_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CW_Start_Date__c</fullName>
    <description>StartDate</description>
    <label>Established</label>
    <type>Date</type>
</CustomField>