companyweb/force-app/main/default/objects/account/fields/CW_Street__c.field-meta.xml
<CustomField>
    <fullName>CW_Street__c</fullName>
    <description>Address.Street</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>