companyweb/force-app/main/default/objects/account/fields/CW_VAT_Liable__c.field-meta.xml
<CustomField>
    <fullName>CW_VAT_Liable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>VatEnabled</description>
    <label>VAT Liable</label>
    <type>Checkbox</type>
</CustomField>