companyweb/force-app/main/default/objects/account/fields/CW_VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>CW_VAT_Number__c</fullName>
    <description>VatNumber</description>
    <inlineHelpText>Accepted formats: &quot;869703978&quot;, &quot;0869 703 978&quot;, &quot;BE 0869.703.978&quot;, &quot;BE0869703978&quot;</inlineHelpText>
    <label>VAT Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>