companyweb/force-app/main/default/objects/account/fields/CW_Warnings__c.field-meta.xml
<CustomField>
    <fullName>CW_Warnings__c</fullName>
    <description>WarningsOverview.Warnings</description>
    <label>Warnings</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>